@@ -155,6 +155,10 @@ mjb.imageRetryCount=3
 #Hide the watched videos from the new category.
 mjb.Library.hideWatched=true
 
+# JPEG Compression Quality
+# Values between 0 and 100 allowed - with 100 specifying minimum compression and maximum quality/filesize
+# default jpeg.quality=75
+mjb.jpeg.quality=75
 
 ################################################################
 ## Log File Parameters
