@@ -12,6 +12,7 @@ MovieJukebox 2.4 BETA
  - Enhancement  #1839 Only show Unwatched videos in the new categories
  - Fixes defect #1844 fileImageFile is not encoded
  - Fixed defect #1845 Fanart scanner fails to find movie when title is different than original title
+ - Enhancement  #1847 Change JPEG compression quality
 
 MovieJukebox 2.3
 ----------------
